Tidy up my mess

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "aws-access-key": "AKIAJ7OVQT3XFH2TQTGA",
-    "aws-bucket-name": "tramsimulator",
-    "aws-bucket-website": "tramsimulator.s3-website-ap-southeast-2.amazonaws.com",
+    "aws-bucket-name": "tramsimulator.com.au",
+    "aws-bucket-website": "tramsimulator.com.au.s3-website-us-east-1.amazonaws.com",
     "port": 8857
 }
